# opencodecs

./: .gitignore  INSTALL.md  README.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  tests.yml
bench/: README.md  bench_codecs.py  bench_czi.py  bench_czi_pipeline.py  bench_jxl.py  bench_ndtiff.py  bench_parallel_tiff.py  bench_png.py  bench_tiff_http.py  bench_tifffile_patch.py  bench_zerocopy.py  build_codec_libs.sh  build_libjxl.sh  diagnose_czi_nas.py  perf_baseline.arm64.json  perf_baseline.x86_64.json  probe_remote_hdf5.py  profile_tifffile.py  run_benchmarks.py
bench/results/mac.lan_arm64/: 20260511T065450Z.json  20260511T065551Z.json  20260511T065651Z.json  20260511T071326Z.json  20260511T071355Z.json  20260511T071751Z.json  20260511T071828Z.json  20260511T073916Z.json  20260511T074052Z.json  20260511T080508Z.json  20260511T080646Z.json  20260511T080819Z.json  20260511T080946Z.json  20260511T081121Z.json  20260511T085319Z.json  20260511T085359Z.json  20260511T090427Z.json  20260511T225944Z.json  20260511T233801Z.json  20260512T204728Z.json  20260512T204903Z.json  20260512T205007Z.json  20260512T210721Z.json  20260512T210801Z.json  20260512T211211Z.json  20260512T211226Z.json  20260512T211413Z.json  20260512T212732Z.json  20260512T212753Z.json  20260513T095514Z.json  20260513T095534Z.json  20260513T204318Z.json  20260513T204340Z.json  20260513T210451Z.json  20260513T214149Z.json  20260513T225050Z.json  20260514T045413Z.json  20260514T045948Z.json  20260514T051256Z.json  20260514T052035Z.json  (+12 more)
bench/results/threadripper_x86_64/: 20260511T070021Z.json  20260511T074352Z.json  20260511T081827Z.json  20260511T085600Z.json  history.jsonl  latest.md
bench/results/win11-ltsc_amd64/: 20260513T103924Z.json  20260513T104605Z.json
ci/: environment.yml
docs/: TODO_DEFERRED.md  TODO_HTJ2K.md  codec_api_conventions.md  io_patterns.md  publishing.md
src/opencodecs/: __init__.py  _aec_codec.py  _avif_codec.py  _b2nd_codec.py  _bcn_codec.py  _bitshuffle_codec.py  _blosc2_codec.py  _bmp_codec.py  _brotli_codec.py  _brunsli_codec.py  _byteshuffle_codec.py  _bz2_codec.py  _cms_codec.py  _czi_codec.py  _czi_reader.py  _czi_writer.py  _deflate_codec.py  _dicomrle_codec.py  _dicomweb.py  _eer_reader.py  _ets.py  _fits.py  _gif_codec.py  _hdf5_codec.py  _hdf5_http.py  _heif_codec.py  _htj2k_codec.py  _jpeg2k_codec.py  _jpeg_codec.py  _jpegls_codec.py  _jxl_codec.py  _lerc_codec.py  _lif_codec.py  _lif_native.py  _lz4_codec.py  _lzma_codec.py  _mozjpeg_codec.py  _nd2_codec.py  _nd2_native.py  _ndtiff.py  (+36 more)
src/opencodecs/codecs/: __init__.py  _aec.pyx  _avif.pyx  _b2nd.pyx  _bcdec.pyx  _bitshuffle.pyx  _blosc2.pyx  _bmp.pyx  _brotli.pyx  _brunsli.pyx  _bytetools.pyx  _charls.pyx  _deflate.pyx  _eer.pyx  _gif.pyx  _heif.pyx  _jpeg.pyx  _jpeg2k.pyx  _jxl.pyx  _lerc.pyx  _lz4.pyx  _mozjpeg.pyx  _ndtiff.pyx  _openjph.pyx  _pcodec.pyx  _png.pyx  _qoi.pyx  _rcomp.pyx  _registry.py  _snappy.pyx  _sperr.pyx  _sz3.pyx  _tiff.pyx  _webp.pyx  _zfp.pyx  _zstd.pyx  avif.pxd  b2nd.pxd  b2nd_helpers.c  b2nd_helpers.h  (+31 more)
src/opencodecs/core/: __init__.py  _io_helpers.py  _optional_backend.py  codec.py  color.py  errors.py  io.py  pyramid.py  segment_compression.py
tests/: _czi_fixture.py  _range_http_server.py  download_test_corpus.sh  test_auto_pyramid.py  test_bcdec.py  test_brunsli.py  test_charls.py  test_core_codec_api.py  test_corpus.py  test_corpus_codec_decode.py  test_corpus_other.py  test_corpus_png.py  test_corpus_tiff.py  test_corpus_vendors.py  test_coverage_final.py  test_coverage_finishing.py  test_coverage_last.py  test_coverage_more.py  test_coverage_push.py  test_czi_fixture.py  test_czi_pyramid.py  test_czi_writer.py  test_data_source.py  test_deflate.py  test_dicomweb.py  test_edge_cases.py  test_eer.py  test_encode_comprehensive.py  test_error_handling.py  test_fits.py  test_gif.py  test_hdf5_http.py  test_hdf5_local.py  test_heif_avif_features.py  test_http_byte_savings.py  test_http_unified.py  test_io_chunked.py  test_jxl.py  test_lif_native.py  test_mozjpeg.py  (+28 more)
