[build-system]
requires = ["setuptools>=64", "wheel", "Cython>=3.0", "numpy>=1.25"]
build-backend = "setuptools.build_meta"

[project]
name = "opencodecs"
version = "0.1.0.dev0"
description = "Streaming, network-aware image codecs for scientific imaging (prototype: JPEG XL)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Kevin Cutler" }]
dependencies = ["numpy>=1.25", "platformdirs>=4"]

[project.optional-dependencies]
# tifffile >=2024.5 ships TiffPage.init_decode(), which opencodecs.tiff_reader
# uses for its parallel pread+decode loop. Older tifffile lacks the method
# entirely (verified on Linux 2023.2.28).
tiff = ["tifffile>=2024.5.10"]
hdf5 = ["h5py"]
# zarr v3 is only available for Python ≥ 3.11 — but our zarr v3
# BytesBytesCodec wrappers gracefully skip when zarr is < 3 (the
# `_need_zarr_v3()` helper checks `zarr.__version__.startswith("3")`).
# So we list `zarr` without a floor; on Py 3.10 pip resolves to 2.x and
# the v3 wrapper tests skip; on Py 3.11+ pip picks 3.x and they run.
zarr = ["numcodecs", "zarr"]
test = [
    "pytest>=8",
    "pytest-cov",
    "tifffile>=2024.5.10",
    "h5py",
    "numcodecs",
    "zarr",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["opencodecs*"]


[tool.pytest.ini_options]
# Explicit test discovery so pytest works the same on every CI runner
# (some runners chdir to the repo root; others to a worktree). Adding
# ``tests`` to pythonpath lets test_czi_fixture do ``from _czi_fixture
# import ...`` without packaging tests/ as an installable subpackage.
testpaths = ["tests"]
pythonpath = ["tests"]


[tool.coverage.run]
source = ["opencodecs"]
omit = [
    # tiff_reader / tifffile_patch are optional optimization layers; skipped
    # when tifffile isn't present. Keep them in the report — see
    # # pragma: no cover where appropriate.
]
branch = false


# ---------------------------------------------------------------------------
# cibuildwheel — produces self-contained wheels that bundle every linked
# system library (libjxl, libavif, libheif, ...) into the .whl via
# auditwheel/delocate. Without this the user would have to apt/brew/conda
# the libs themselves before `pip install opencodecs`.
# ---------------------------------------------------------------------------

[tool.cibuildwheel]
# Stable CPython versions only. Skip musllinux (no manylinux prebuilt
# binaries for several of the codec libs there) and pp* (PyPy lacks the
# C-extension compatibility we depend on).
build = "cp310-* cp311-* cp312-* cp313-*"
skip = ["*-musllinux*", "pp*"]
build-frontend = "build"
test-requires = ["pytest", "tifffile>=2024.5.10", "h5py", "numcodecs", "zarr>=3"]
# Smoke-test each wheel inside cibuildwheel's isolated env. Don't run the
# full suite — the test-on-host job already does that, and slowing wheel
# builds with full pytest would multiply CI time by 4× per cell.
test-command = "pytest -q -k 'not lab_czi and not LAB_CZI' {project}/tests/test_unified_api.py {project}/tests/test_optional_backend.py"

[tool.cibuildwheel.linux]
# manylinux_2_28 = AlmaLinux 8. EPEL covers most of the codec libs, and
# everything that isn't in EPEL falls into one of two buckets:
#
#   1. opencodecs's optional-backend pattern. If libavif / libheif /
#      libdeflate / c-blosc2 fail to install, the corresponding Cython
#      extension's required-header probe fails at build time; setup.py
#      drops it from the extensions list and the resulting wheel just
#      doesn't expose that codec. The package still imports cleanly and
#      every other codec works.
#
#   2. libjxl — the marquee codec. We MUST have it. EPEL doesn't ship
#      a recent libjxl, so we always build 0.11+ from source via
#      bench/build_libjxl.sh (cmake + ninja, both in manylinux_2_28).
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
before-all = [
    "dnf install -y epel-release",
    "dnf install -y cmake ninja-build git",
    # Best-effort: install codec libs that ARE in repos. Missing ones fall
    # through to the optional-backend pattern.
    "dnf install -y zlib-devel zstd-devel libzstd-devel lz4-devel brotli-devel libwebp-devel libpng-devel libjpeg-turbo-devel openjpeg2-devel libavif-devel libheif-devel libdeflate-devel blosc2-devel || true",
    # libjxl: build from source. OPENCODECS_LIBJXL_PREFIX=/usr/local is
    # passed via CIBW_ENVIRONMENT_LINUX in the workflow file so the
    # script writes there instead of into the user cache (which doesn't
    # persist across cibuildwheel's container layers).
    "bash bench/build_libjxl.sh",
    "ldconfig",
]
# OPENCODECS_JXL_PREFIX tells setup.py to look in /usr/local for the
# libjxl we just built.
environment = { OPENCODECS_JXL_PREFIX = "/usr/local", OPENCODECS_LIBJXL_PREFIX = "/usr/local" }

[tool.cibuildwheel.macos]
# macos-latest runners have brew preinstalled. Install codec libs in the
# host shell before cibuildwheel invokes setup.py (cibuildwheel for macOS
# runs natively, no container).
before-all = "brew install jpeg-xl libavif libheif webp libpng jpeg-turbo openjpeg zstd brotli c-blosc2 lz4 libdeflate"
# Match the floor in setup.py so wheel tag and binary agree. M-series CI
# runners need 11.0+; older deployment targets fail to link libjxl 0.11.
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }

[tool.cibuildwheel.windows]
# Windows pre-install happens at the GitHub Actions level (see
# build_wheels.yml — conda-incubator/setup-miniconda + conda install).
# CIBW_ENVIRONMENT_WINDOWS pipes the resulting CONDA_PREFIX into setup.py.
