[build-system]
requires = ["setuptools>=64", "wheel", "Cython>=3.0", "numpy>=1.25"]
build-backend = "setuptools.build_meta"

[project]
name = "opencodecs"
version = "0.1.0.dev0"
description = "Streaming, network-aware image codecs for scientific imaging (prototype: JPEG XL)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Kevin Cutler" }]
dependencies = ["numpy>=1.25", "platformdirs>=4"]

[project.optional-dependencies]
# tifffile >=2024.5 ships TiffPage.init_decode(), which opencodecs.tiff_reader
# uses for its parallel pread+decode loop. Older tifffile lacks the method
# entirely (verified on Linux 2023.2.28).
tiff = ["tifffile>=2024.5.10"]
hdf5 = ["h5py"]
# zarr v3 is only available for Python ≥ 3.11 — but our zarr v3
# BytesBytesCodec wrappers gracefully skip when zarr is < 3 (the
# `_need_zarr_v3()` helper checks `zarr.__version__.startswith("3")`).
# So we list `zarr` without a floor; on Py 3.10 pip resolves to 2.x and
# the v3 wrapper tests skip; on Py 3.11+ pip picks 3.x and they run.
zarr = ["numcodecs", "zarr"]
test = [
    "pytest>=8",
    "pytest-cov",
    "tifffile>=2024.5.10",
    "h5py",
    "numcodecs",
    "zarr",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["opencodecs*"]


[tool.pytest.ini_options]
# Explicit test discovery so pytest works the same on every CI runner
# (some runners chdir to the repo root; others to a worktree). Adding
# ``tests`` to pythonpath lets test_czi_fixture do ``from _czi_fixture
# import ...`` without packaging tests/ as an installable subpackage.
testpaths = ["tests"]
pythonpath = ["tests"]


[tool.coverage.run]
source = ["opencodecs"]
omit = [
    # tiff_reader / tifffile_patch are optional optimization layers; skipped
    # when tifffile isn't present. Keep them in the report — see
    # # pragma: no cover where appropriate.
]
branch = false


# ---------------------------------------------------------------------------
# cibuildwheel — produces self-contained wheels that bundle every linked
# system library (libjxl, libavif, libheif, ...) into the .whl via
# auditwheel/delocate. Without this the user would have to apt/brew/conda
# the libs themselves before `pip install opencodecs`.
# ---------------------------------------------------------------------------

[tool.cibuildwheel]
# Stable CPython versions only. Skip musllinux (no manylinux prebuilt
# binaries for several of the codec libs there) and pp* (PyPy lacks the
# C-extension compatibility we depend on).
build = "cp310-* cp311-* cp312-* cp313-*"
skip = ["*-musllinux*", "pp*"]
build-frontend = "build"
# zarr 3.x requires Python ≥ 3.11; let pip resolve to whatever fits the
# wheel's interpreter (zarr 2.x on cp310, 3.x on cp311+). Tests that need
# v3 wrappers skip via _need_zarr_v3() at runtime.
test-requires = ["pytest", "tifffile>=2024.5.10", "h5py", "numcodecs", "zarr"]
# Smoke-test each wheel inside cibuildwheel's isolated env. Don't run the
# full suite — the test-on-host job already does that, and slowing wheel
# builds with full pytest would multiply CI time by 4× per cell.
# `cd` into the project dir to dodge cross-platform path-quoting issues
# (Windows: D:\a\... + forward slashes confuses pytest's collector).
test-command = "cd {project} && pytest -q -k 'not lab_czi and not LAB_CZI' tests/test_unified_api.py tests/test_optional_backend.py"

[tool.cibuildwheel.linux]
# manylinux_2_28 = AlmaLinux 8. EPEL covers most of the codec libs, and
# everything that isn't in EPEL falls into one of two buckets:
#
#   1. opencodecs's optional-backend pattern. If libavif / libheif /
#      libdeflate / c-blosc2 fail to install, the corresponding Cython
#      extension's required-header probe fails at build time; setup.py
#      drops it from the extensions list and the resulting wheel just
#      doesn't expose that codec. The package still imports cleanly and
#      every other codec works.
#
#   2. libjxl — the marquee codec. We MUST have it. EPEL doesn't ship
#      a recent libjxl, so we always build 0.11+ from source via
#      bench/build_libjxl.sh (cmake + ninja, both in manylinux_2_28).
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
before-all = [
    "dnf install -y epel-release",
    "dnf install -y cmake ninja-build git",
    # Each codec lib in its own dnf line so any package that's missing
    # from EPEL doesn't drop the whole transaction. The optional-backend
    # pattern means missing libs at build time → just-skipped extension.
    # Known packages in manylinux_2_28 (AlmaLinux 8) base + EPEL 8:
    "dnf install -y zlib-devel || true",
    "dnf install -y libzstd-devel || true",
    "dnf install -y lz4-devel || true",
    "dnf install -y brotli-devel || true",
    "dnf install -y libwebp-devel || true",
    "dnf install -y libpng-devel || true",
    "dnf install -y libjpeg-turbo-devel || true",
    "dnf install -y openjpeg2-devel || true",
    "dnf install -y libdeflate-devel || true",
    # Not in AlmaLinux 8 / EPEL 8: libavif-devel, libheif-devel,
    # blosc2-devel — those extensions auto-skip via optional-backend.
    # libjxl: build from source. OPENCODECS_LIBJXL_PREFIX is set via
    # CIBW_ENVIRONMENT_LINUX in build_wheels.yml to point at the cached
    # /cibw-jxl-prefix mount.
    "bash bench/build_libjxl.sh",
]
# Don't set OPENCODECS_*_PREFIX here — build_wheels.yml's
# CIBW_ENVIRONMENT_LINUX overrides them with the cache-mount path.

[tool.cibuildwheel.macos]
# macos-latest runners have brew preinstalled. Install codec libs in the
# host shell before cibuildwheel invokes setup.py (cibuildwheel for macOS
# runs natively, no container).
before-all = "brew install jpeg-xl libavif libheif webp libpng jpeg-turbo openjpeg zstd brotli c-blosc2 lz4 libdeflate"
# macos-latest is now macOS 15 (Sequoia) on arm64. Homebrew formulas are
# compiled for 15.x, so any wheel target lower than 15 fails the delocate
# scan (linked dylibs reference symbols added in 15). Setting
# MACOSX_DEPLOYMENT_TARGET=15.0 lines the wheel tag up with the brew libs;
# Macs older than 15 fall back to the sdist (or to source-built libs via
# bench/build_codec_libs.sh once that lands in the wheel pipeline).
environment = { MACOSX_DEPLOYMENT_TARGET = "15.0" }

[tool.cibuildwheel.windows]
# Windows pre-install happens at the GitHub Actions level (see
# build_wheels.yml — conda-incubator/setup-miniconda + conda install).
# CIBW_ENVIRONMENT_WINDOWS pipes the resulting CONDA_PREFIX into setup.py.
