[build-system]
requires = ["setuptools>=64", "wheel", "Cython>=3.0", "numpy>=1.25"]
build-backend = "setuptools.build_meta"

[project]
name = "opencodecs"
version = "0.1.0"
description = "Streaming, network-aware image codecs for scientific imaging (prototype: JPEG XL)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Kevin Cutler" }]
dependencies = ["numpy>=1.25", "platformdirs>=4"]

[project.optional-dependencies]
# tifffile >=2024.5 ships TiffPage.init_decode(), which opencodecs.tiff_reader
# uses for its parallel pread+decode loop. Older tifffile lacks the method
# entirely (verified on Linux 2023.2.28).
tiff = ["tifffile>=2024.5.10"]
hdf5 = ["h5py"]
# zarr v3 is only available for Python ≥ 3.11 — but our zarr v3
# BytesBytesCodec wrappers gracefully skip when zarr is < 3 (the
# `_need_zarr_v3()` helper checks `zarr.__version__.startswith("3")`).
# So we list `zarr` without a floor; on Py 3.10 pip resolves to 2.x and
# the v3 wrapper tests skip; on Py 3.11+ pip picks 3.x and they run.
zarr = ["numcodecs", "zarr"]
test = [
    "pytest>=8",
    "pytest-cov",
    "tifffile>=2024.5.10",
    "h5py",
    "numcodecs",
    "zarr",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["opencodecs*"]


[tool.pytest.ini_options]
# Explicit test discovery so pytest works the same on every CI runner
# (some runners chdir to the repo root; others to a worktree). Adding
# ``tests`` to pythonpath lets test_czi_fixture do ``from _czi_fixture
# import ...`` without packaging tests/ as an installable subpackage.
testpaths = ["tests"]
pythonpath = ["tests"]


[tool.coverage.run]
source = ["opencodecs"]
omit = [
    # tiff_reader / tifffile_patch are optional optimization layers; skipped
    # when tifffile isn't present. Keep them in the report — see
    # # pragma: no cover where appropriate.
]
branch = false


# ---------------------------------------------------------------------------
# cibuildwheel — produces self-contained wheels that bundle every linked
# system library (libjxl, libavif, libheif, ...) into the .whl via
# auditwheel/delocate. Without this the user would have to apt/brew/conda
# the libs themselves before `pip install opencodecs`.
# ---------------------------------------------------------------------------

[tool.cibuildwheel]
# Stable CPython versions only. Skip musllinux (no manylinux prebuilt
# binaries for several of the codec libs there) and pp* (PyPy lacks the
# C-extension compatibility we depend on).
build = "cp310-* cp311-* cp312-* cp313-*"
skip = ["*-musllinux*", "pp*"]
build-frontend = "build"
# zarr 3.x requires Python ≥ 3.11; let pip resolve to whatever fits the
# wheel's interpreter (zarr 2.x on cp310, 3.x on cp311+). Tests that need
# v3 wrappers skip via _need_zarr_v3() at runtime.
test-requires = ["pytest", "tifffile>=2024.5.10", "h5py", "numcodecs", "zarr"]
# Smoke-test each wheel inside cibuildwheel's isolated env. Don't run the
# full suite — the test-on-host job already does that, and slowing wheel
# builds with full pytest would multiply CI time by 4× per cell. Just
# the two files that don't depend on a lab CZI mount, so no -k filter is
# needed (which avoids cross-shell single-vs-double-quote pain — Windows
# cmd.exe and POSIX shells disagree on single-quote semantics).
test-command = "pytest -q {project}/tests/test_unified_api.py {project}/tests/test_optional_backend.py"

[tool.cibuildwheel.linux]
# manylinux_2_28 = AlmaLinux 8. EPEL covers most of the codec libs, and
# everything that isn't in EPEL falls into one of two buckets:
#
#   1. opencodecs's optional-backend pattern. If libavif / libheif /
#      libdeflate / c-blosc2 fail to install, the corresponding Cython
#      extension's required-header probe fails at build time; setup.py
#      drops it from the extensions list and the resulting wheel just
#      doesn't expose that codec. The package still imports cleanly and
#      every other codec works.
#
#   2. libjxl — the marquee codec. We MUST have it. EPEL doesn't ship
#      a recent libjxl, so we always build 0.11+ from source via
#      bench/build_libjxl.sh (cmake + ninja, both in manylinux_2_28).
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
before-all = [
    "dnf install -y epel-release dnf-plugins-core",
    "dnf install -y cmake ninja-build git nasm",
    # `meson` is needed to build dav1d (libavif's AV1 decoder). Available
    # via pip on every Python the manylinux container ships.
    "pip install --quiet meson",
    # Codec libs that live in EPEL 8 for AlmaLinux 8: each on its own
    # line so any single missing package doesn't drop the whole
    # transaction. `|| true` because EPEL contents shift over time
    # and `optional-backend` handles a missing extension gracefully.
    "dnf install -y zlib-devel || true",
    "dnf install -y libzstd-devel || true",
    "dnf install -y lz4-devel || true",
    "dnf install -y brotli-devel || true",
    "dnf install -y libwebp-devel || true",
    "dnf install -y libpng-devel || true",
    "dnf install -y openjpeg2-devel || true",
    "dnf install -y libdeflate-devel || true",
    # libjpeg-turbo (TJv3 API needed; EPEL 8 ships 1.5), c-blosc2 (not
    # in any AlmaLinux 8 repo), and the libavif/libheif decode chain
    # (libde265 + dav1d + libavif + libheif — also absent from
    # AlmaLinux 8 + EPEL 8 + CRB). All five built from source via
    # bench/build_codec_libs.sh into the cached /cibw-jxl-prefix mount.
    # Skips encoders (aom, x265) — wheel ships decode-only AVIF/HEIF
    # to keep the build under ~10 min cold and avoid GPL x265 entirely.
    "bash bench/build_codec_libs.sh --only=libjpeg-turbo,c-blosc2,libde265,dav1d,libavif,libheif",
    "bash bench/build_libjxl.sh",
]
# Don't set OPENCODECS_*_PREFIX here — build_wheels.yml's
# CIBW_ENVIRONMENT_LINUX overrides them with the cache-mount path.

[tool.cibuildwheel.macos]
# macos-latest runners have brew preinstalled. Install codec libs in the
# host shell before cibuildwheel invokes setup.py (cibuildwheel for macOS
# runs natively, no container).
before-all = "brew install jpeg-xl libavif libheif webp libpng jpeg-turbo openjpeg zstd brotli c-blosc2 lz4 libdeflate"
# macos-latest is now macOS 15 (Sequoia) on arm64. Homebrew formulas are
# compiled for 15.x, so any wheel target lower than 15 fails the delocate
# scan (linked dylibs reference symbols added in 15). Setting
# MACOSX_DEPLOYMENT_TARGET=15.0 lines the wheel tag up with the brew libs;
# Macs older than 15 fall back to the sdist (or to source-built libs via
# bench/build_codec_libs.sh once that lands in the wheel pipeline).
environment = { MACOSX_DEPLOYMENT_TARGET = "15.0" }

[tool.cibuildwheel.windows]
# Windows pre-install happens at the GitHub Actions level (see
# build_wheels.yml — conda-incubator/setup-miniconda + conda install).
# CIBW_ENVIRONMENT_WINDOWS pipes the resulting CONDA_PREFIX into setup.py.
#
# delvewheel runs by default to bundle linked DLLs into the wheel, but
# it only finds DLLs that are on PATH at delvewheel's invocation time.
# cibuildwheel's subprocess for the repair step doesn't inherit our
# $GITHUB_PATH addition, so pass --add-path explicitly. The
# OPENCODECS_CODEC_LIBS_PREFIX env var holds the conda env root in
# forward-slash form (set in build_wheels.yml).
#
# Custom repair-wheel-command for Windows: cibuildwheel runs the
# command in the BUILD venv's shell context (not its own venv), so
# neither `delvewheel` nor `python -m delvewheel` finds the package
# unless we install it just-in-time. `pip install delvewheel` is a few
# seconds; the `python -m delvewheel repair` then runs against the
# package we just dropped in. cibuildwheel evaluates this in bash on
# Windows, so $VAR / && / single quotes all work.
repair-wheel-command = 'pip install --quiet delvewheel && python -m delvewheel repair --add-path "$OPENCODECS_CODEC_LIBS_PREFIX/Library/bin" -w {dest_dir} {wheel}'
